# risk-dice-rolls

./: .gitignore  README.md  pyproject.toml
notebooks/: risk-dice-rolls.ipynb
